@@ -60,7 +60,6 @@
     <string name="BookmarksListActivity.ImportSource">Choisissez la source d\'import</string>
     <string name="BookmarksListActivity.AndroidImportSource">Favoris du navigateur Android</string>
     <string name="BookmarksListActivity.ExportDialogTitle">Export des favoris</string>
-    <string name="BookmarksListActivity.ExportDialogMessage">les favoris seront exportés vers %s.</string>
     
     <string name="EditBookmarkActivity.Title">Modifier le favori</string>
     <string name="EditBookmarkActivity.TitleAdd">Ajouter un favori</string>
@@ -283,5 +282,7 @@
         <item>@string/PreferencesActivity.UserAgentDesktop</item>
         <item>@string/PreferencesActivity.UserAgentCustom</item>
     </string-array>
+    
+    <string name="BookmarksListActivity.AndroidExportTarget">Favoris du navigateur Android</string>
     
 </resources>
