@@ -15,17 +15,16 @@
 
 package org.zirco.utils;
 
+import android.content.ContentValues;
 import android.content.Context;
 import android.database.Cursor;
-import android.net.Uri;
+import android.provider.Browser;
 import android.provider.Browser.BookmarkColumns;
 
 /**
  * Utilities to manage bookmarks.
  */
 public class BookmarksUtils {
-
-	private static final Uri BOOKMARKS_URI = Uri.parse("content://browser/bookmarks");
 
 	/*
 	public static void saveBookmark(Context c, String title, String url) {
@@ -46,13 +45,28 @@ public class BookmarksUtils {
 	*/
 
 	/**
+	 * Save an Android bookmark.
+	 * @param context The current context.
+	 * @param title The bookmark title.
+	 * @param url The bookmark url.
+	 */
+	public static void saveAndroidBookmark(Context context, String title, String url) {
+		ContentValues values = new ContentValues();
+		values.put(Browser.BookmarkColumns.TITLE, title);
+		values.put(Browser.BookmarkColumns.URL, url);
+		values.put(Browser.BookmarkColumns.BOOKMARK, 1);
+		
+		context.getContentResolver().insert(Browser.BOOKMARKS_URI, values);
+	}
+	
+	/**
 	 * Gets the Android bookmarks.
 	 * @param context The current context.
 	 * @return A Cursor to Android bookmarks.
 	 * @throws IllegalStateException Exception.
 	 */
-	public static final Cursor getAllBookmarks(Context context) throws IllegalStateException {
-		return context.getContentResolver().query(BOOKMARKS_URI,
+	public static final Cursor getAllAndroidBookmarks(Context context) throws IllegalStateException {
+		return context.getContentResolver().query(Browser.BOOKMARKS_URI,
 				new String[] {BookmarkColumns.TITLE, BookmarkColumns.URL}, 
 				"bookmark = 1", null, null);
 	}
